syntax = "proto3";

package wres.statistics.generated;

import "metric_name.proto";

option java_package = "wres.statistics.generated";
option java_outer_classname = "DoubleScoreMetricProto";
option java_multiple_files = true;

message DoubleScoreMetric
{
    /*A message that encapsulates a score metric or scoring rule, which is composed 
    of one or more scalar values.*/
    
    MetricName name = 1;
    // Metric name.
    
    repeated DoubleScoreMetricComponent components = 2;
    // One or more score components.
    
    message DoubleScoreMetricComponent
    {
        // A score component name.
        
        enum ComponentName 
        {
            // The name of a score component.
            
            MAIN = 0;
            RELIABILITY = 1; // Type-I bias
            RESOLUTION = 2;
            UNCERTAINTY = 3;
            TYPE_II_BIAS = 4;
            DISCRIMINATION = 5;
            SHARPNESS = 6;
            POTENTIAL = 7; 
            TRUE_POSITIVES = 8;
            FALSE_POSITIVES = 9;
            FALSE_NEGATIVES = 10;
            TRUE_NEGATIVES = 11;
        }

        ComponentName name = 1;

        string units = 2;
        // Units of the score.
        
        double optimum = 3; 
        // The optimum value of the score (e.g., 1.0 for skill).
        
        double minimum = 4;
        // The lower bound of the score (e.g., 0 for the mean absolute error).
                
        double maximum = 5;
        // The upper bound of the score (e.g., 1 for pearson's correlation).
    }
}