syntax = "proto3";

package wres.statistics.generated;

import "geometry.proto";
import "time_window.proto";
import "pairs.proto";

option java_package = "wres.statistics.generated";
option java_outer_classname = "PoolProto";
option java_multiple_files = true;

message Pool
{
    /*A message that encapsulates a pool, which is the atomic collection of 
    pairs and statistics.*/
    
    repeated Geometry geometries = 1;
    // Zero or more geometries that characterize this pool.
        
    TimeWindow time_window = 2;
    // The temporal boundaries of the pool.
    
    Pairs pairs = 3;
    // The paired values that form the pool.
        
    Pairs baseline_pairs = 4;
    // The pairs for the baseline source, where applicable.
}